# regexp-automata

./: LICENSE  README  README.md  regexp-automata.cabal
src/Automata/: DFA.hs  NFA.hs  RegExp.hs
src/Search/: Driver.hs  Lexer.x  Parser.y
tests/: testcase1  testcase2  testcase3  testcase4  testcase5
