name:                regexp-automata
version:             0.1.0.0
synopsis:            Various automata.
license:             BSD3
license-file:        LICENSE
author:              davd
maintainer:          davd@localhost
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Automata.DFA, Automata.NFA, Automata.RegExp
  build-depends:       base >= 4.6,
                       recursion-schemes >= 3.0
  hs-source-dirs:      src
  default-language:    Haskell2010

executable search
  main-is:             Search/Driver.hs
  other-modules:       Search.Lexer, Search.Parser
  build-depends:       array >= 0.4,
                       base >= 4.6,
                       recursion-schemes >= 3.0
  hs-source-dirs:      src
  build-tools:         alex, happy
  default-language:    Haskell2010
